--- a/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
+++ b/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
@@ -14,7 +14,6 @@
             android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primaryLightColor"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <androidx.appcompat.widget.Toolbar
@@ -60,66 +59,79 @@
                 android:id="@+id/expanded_toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/edx_default_margin"
-                android:paddingTop="@dimen/edx_half_margin"
-                android:paddingEnd="@dimen/edx_default_margin"
-                android:paddingBottom="@dimen/edx_default_margin"
-                app:layout_collapseMode="parallax">
+                android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/expanded_toolbar_dismiss"
-                    android:layout_width="@dimen/widget_margin_double"
-                    android:layout_height="@dimen/widget_margin_double"
-                    android:layout_gravity="end"
-                    android:paddingEnd="@dimen/expanded_toolbar_margin_end"
-                    app:srcCompat="@drawable/ic_close"
-                    app:tint="@color/neutralWhiteT"
-                    tools:ignore="RtlSymmetry" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/course_organization"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/expanded_toolbar_margin_top"
-                    android:fontFamily="@font/inter_semi_bold"
-                    android:textColor="@color/warningLight"
-                    android:textDirection="locale"
-                    android:textSize="@dimen/edx_x_small"
-                    app:lineHeight="@dimen/widget_margin_double"
-                    tools:text="BerkeleyX" />
+                    android:layout_height="match_parent"
+                    android:background="@color/primaryLightColor"
+                    android:orientation="vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingTop="@dimen/edx_half_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:paddingBottom="@dimen/edx_default_margin"
+                    app:layout_collapseMode="parallax">
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/course_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/edx_quarter_margin"
-                    android:fontFamily="?attr/fontSemiBold"
-                    android:textAppearance="@style/CourseDashboardExpandedToolbarTitle"
-                    android:textDirection="locale"
-                    tools:text="The Science of Happiness" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/expanded_toolbar_dismiss"
+                        android:layout_width="@dimen/widget_margin_double"
+                        android:layout_height="@dimen/widget_margin_double"
+                        android:layout_gravity="end"
+                        android:paddingEnd="@dimen/expanded_toolbar_margin_end"
+                        app:srcCompat="@drawable/ic_close"
+                        app:tint="@color/neutralWhiteT"
+                        tools:ignore="RtlSymmetry" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/course_expiry_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/edx_quarter_margin"
-                    android:textColor="@color/neutralXLight"
-                    android:textDirection="locale"
-                    android:textSize="@dimen/edx_xx_small"
-                    android:visibility="gone"
-                    app:lineHeight="@dimen/edx_default_margin"
-                    tools:text="Access expires 1/1/2022"
-                    tools:visibility="visible" />
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/course_organization"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/expanded_toolbar_margin_top"
+                        android:fontFamily="?attr/fontSemiBold"
+                        android:textColor="@color/warningLight"
+                        android:textDirection="locale"
+                        android:textSize="@dimen/edx_x_small"
+                        app:lineHeight="@dimen/widget_margin_double"
+                        tools:text="BerkeleyX" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/course_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/edx_quarter_margin"
+                        android:fontFamily="?attr/fontSemiBold"
+                        android:textAppearance="@style/CourseDashboardExpandedToolbarTitle"
+                        android:textDirection="locale"
+                        tools:text="The Science of Happiness" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/course_expiry_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/edx_quarter_margin"
+                        android:textColor="@color/neutralXLight"
+                        android:textDirection="locale"
+                        android:textSize="@dimen/edx_xx_small"
+                        android:visibility="gone"
+                        app:lineHeight="@dimen/edx_default_margin"
+                        tools:text="Access expires 1/1/2022"
+                        tools:visibility="visible" />
+
+                    <include
+                        android:id="@+id/layout_upgrade_btn"
+                        layout="@layout/layout_upgrade_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/edx_default_margin"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
+
+                </LinearLayout>
 
                 <include
-                    android:id="@+id/layout_upgrade_btn"
-                    layout="@layout/layout_upgrade_btn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/edx_default_margin"
-                    android:visibility="gone"
-                    tools:visibility="visible" />
+                    android:id="@+id/certificate"
+                    layout="@layout/layout_course_dashboard_certificate"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
