--- a/OpenEdXMobile/res/layout/activity_course_unit_navigation.xml
+++ b/OpenEdXMobile/res/layout/activity_course_unit_navigation.xml
@@ -9,7 +9,9 @@
         android:id="@+id/course_navigation_toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/course_unit_nav_bar">
+        app:layout_constraintBottom_toTopOf="@+id/course_unit_nav_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
@@ -22,26 +24,26 @@
                 android:id="@+id/collapsing_toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
+                app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">
 
                 <LinearLayout
                     android:id="@+id/expanded_toolbar_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    app:layout_collapseMode="parallax">
+
+                    <android.widget.Space
+                        android:id="@+id/space"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/collapsed_toolbar_height" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/primaryLightColor"
                         android:orientation="vertical"
-                        android:padding="@dimen/edx_default_margin"
-                        app:layout_collapseMode="parallax">
-
-                        <android.widget.Space
-                            android:id="@+id/space"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/collapsed_toolbar_height" />
+                        android:padding="@dimen/edx_default_margin">
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/course_sub_section_title"
@@ -166,7 +168,8 @@
         android:gravity="center_vertical"
         android:paddingStart="@dimen/course_unit_nav_bar_padding_right"
         android:paddingEnd="@dimen/course_unit_nav_bar_padding_left"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/goto_prev"
