--- a/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
+++ b/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
@@ -14,46 +14,7 @@
             android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/collapsed_toolbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/collapsed_toolbar_height"
-                android:background="@color/primaryLightColor"
-                app:layout_collapseMode="pin"
-                tools:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:paddingTop="@dimen/widget_margin"
-                    android:paddingBottom="@dimen/widget_margin">
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/collapsed_toolbar_title"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/edx_half_margin"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:fontFamily="?attr/fontSemiBold"
-                        android:maxLines="1"
-                        android:textAppearance="@style/CourseDashboardCollapsedToolbarTitle"
-                        tools:text="The Science of Happiness " />
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/collapsed_toolbar_dismiss"
-                        android:layout_width="@dimen/widget_margin_double"
-                        android:layout_height="@dimen/widget_margin_double"
-                        android:layout_marginEnd="@dimen/edx_half_margin"
-                        app:srcCompat="@drawable/ic_close"
-                        app:tint="@color/neutralWhiteT" />
-
-                </LinearLayout>
-
-            </androidx.appcompat.widget.Toolbar>
+            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">
 
             <LinearLayout
                 android:id="@+id/expanded_toolbar_layout"
@@ -72,15 +33,9 @@
                     android:paddingBottom="@dimen/edx_default_margin"
                     app:layout_collapseMode="parallax">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/expanded_toolbar_dismiss"
-                        android:layout_width="@dimen/widget_margin_double"
-                        android:layout_height="@dimen/widget_margin_double"
-                        android:layout_gravity="end"
-                        android:paddingEnd="@dimen/expanded_toolbar_margin_end"
-                        app:srcCompat="@drawable/ic_close"
-                        app:tint="@color/neutralWhiteT"
-                        tools:ignore="RtlSymmetry" />
+                    <androidx.legacy.widget.Space
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/widget_margin_double" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/course_organization"
@@ -139,6 +94,45 @@
                     android:visibility="gone" />
 
             </LinearLayout>
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/collapsed_toolbar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/collapsed_toolbar_height"
+                android:background="@color/primaryLightColor"
+                app:layout_collapseMode="pin">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/widget_margin"
+                    android:paddingBottom="@dimen/widget_margin">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/collapsed_toolbar_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/edx_half_margin"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
+                        android:fontFamily="?attr/fontSemiBold"
+                        android:maxLines="1"
+                        android:textAppearance="@style/CourseDashboardCollapsedToolbarTitle"
+                        tools:text="The Science of Happiness " />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/collapsed_toolbar_dismiss"
+                        android:layout_width="@dimen/widget_margin_double"
+                        android:layout_height="@dimen/widget_margin_double"
+                        android:layout_marginEnd="@dimen/edx_half_margin"
+                        app:srcCompat="@drawable/ic_close"
+                        app:tint="@color/neutralWhiteT" />
+
+                </LinearLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.tabs.TabLayout
