--- a/OpenEdXMobile/res/layout/activity_course_unit_navigation.xml
+++ b/OpenEdXMobile/res/layout/activity_course_unit_navigation.xml
@@ -158,46 +158,11 @@
                 style="@style/flying_message"
                 android:visibility="gone" />
 
-            <LinearLayout
+            <include
                 android:id="@+id/container_layout_not_available"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone">
+                layout="@layout/layout_component_not_available"
+                android:visibility="gone" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/content_error_icon"
-                    android:layout_width="@dimen/unit_unavailable_error_icon_size"
-                    android:layout_height="@dimen/unit_unavailable_error_icon_size"
-                    android:layout_margin="@dimen/widget_margin_double"
-                    app:srcCompat="@drawable/ic_laptop"
-                    app:tint="@color/neutralXXDark" />
-
-                <TextView
-                    android:id="@+id/not_available_message"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/edx_quadruple_margin"
-                    android:layout_marginEnd="@dimen/edx_quadruple_margin"
-                    android:layout_marginBottom="@dimen/widget_margin_double"
-                    android:gravity="center"
-                    android:singleLine="false"
-                    android:text="@string/assessment_not_available"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/edx_base" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/view_on_web_button"
-                    style="@style/edX.Widget.SecondaryActionButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/widget_margin_double"
-                    android:text="@string/assessment_view_on_web" />
-
-            </LinearLayout>
         </RelativeLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
