feat: Learner feedback collection from the mobile app
- A "Submit Feedback" button should be added to the help section of the profile screen above the “Email the support team” in the edX mobile app.
- The button should feature an icon indicating that it leads to an external link.
- When the "Submit Feedback" button is tapped, it should open an external link, launching a Google Form in the user's default browser.
- Trigger event on Submit Feedback button clicked

fixes: LEARNER-9834

--- a/OpenEdXMobile/res/layout/fragment_account.xml
+++ b/OpenEdXMobile/res/layout/fragment_account.xml
@@ -351,11 +351,26 @@
                     style="@style/profile_field_description"
                     android:text="@string/description_submit_feedback" />
 
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_submit_feedback"
+                    style="@style/edX.Widget.ProfileActionBorderedButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/profile_view_button_height"
+                    android:layout_marginTop="@dimen/edx_half_margin"
+                    android:includeFontPadding="false"
+                    android:text="@string/label_submit_feedback_btn"
+                    app:backgroundTint="@null"
+                    app:icon="@drawable/ic_open_in_new"
+                    app:iconGravity="textEnd"
+                    app:iconSize="@dimen/ic_small"
+                    app:iconTint="@color/primaryBaseColor" />
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_email_support"
                     style="@style/edX.Widget.ProfileActionBorderedButton"
                     android:layout_marginTop="@dimen/edx_half_margin"
-                    android:text="@string/label_submit_feedback_btn" />
+                    android:text="@string/label_email_support_team_btn" />
             </LinearLayout>
 
             <LinearLayout
